Design tweaks and validation, display changes

--- a/src/main/resources/templates/admin_select_contractors_list.html
+++ b/src/main/resources/templates/admin_select_contractors_list.html
@@ -66,9 +66,9 @@
                                 </tbody>
                             </table>
 
-                            <a class="btn btn-lg btn-primary btn-block text-uppercase custom-btn"
-                               th:onclick="mapSelection()"
-                               th:id="assign">Finish</a>
+<!--                            <a class="btn btn-lg btn-primary btn-block text-uppercase custom-btn"-->
+<!--                               th:onclick="mapSelection()"-->
+<!--                               th:id="assign">Finish</a>-->
 
                         </form>
                     </div>
