--- a/src/main/resources/templates/admin_manage_roles_view.html
+++ b/src/main/resources/templates/admin_manage_roles_view.html
@@ -28,7 +28,7 @@
                         <div class="modal-content custom-form">
                             <div class="modal-header custom-bg">
                                 <div class="row">
-                                    <label>Manager to Edit</label>
+                                    <label class="custom-label">Manager to Edit</label>
                                 </div>
                             </div>
 
@@ -64,9 +64,9 @@
                                         Close
                                     </button>
 
-                                    <button class="btn btn-primary">
-                                        Save Changes
-                                    </button>
+<!--                                    <button class="btn btn-primary">-->
+<!--                                        Save Changes-->
+<!--                                    </button>-->
                                 </div>
                             </div>
 
