--- a/src/main/resources/templates/invoice_list_view.html
+++ b/src/main/resources/templates/invoice_list_view.html
@@ -24,40 +24,40 @@
 
                 <div class="custom-form" th:if="${!Reviews.isEmpty()}">
                     <div class="mx-3 custom-bg scrolling-wrapper">
-                        <table class="table table-light">
+                        <table class="table table-light" id="reviews">
                             <thead>
                             <tr>
                                 <th scope="col">
                                     <label for="nameSearch">Name</label>
-                                    <input class="small-input" type="text" id="nameSearch" onkeyup="filterResults()"placeholder="Name">
+                                    <input class="small-input searcher" type="text" id="nameSearch" onkeyup="filterResults()"placeholder="Name">
                                 </th>
                                 <th scope="col">
                                     <label for="agencySearch">Agency</label>
-                                    <input class="small-input" type="text" id="agencySearch" onkeyup="filterResults()"placeholder="Agency">
+                                    <input class="small-input searcher" type="text" id="agencySearch" onkeyup="filterResults()"placeholder="Agency">
                                 </th>
                                 <th scope="col">
                                     <label for="agencyEmailSearch">Agency Email</label>
-                                    <input class="small-input" type="text" id="agencyEmailSearch" onkeyup="filterResults()"placeholder="agency@gmail.com">
+                                    <input class="small-input searcher" type="text" id="agencyEmailSearch" onkeyup="filterResults()"placeholder="agency@gmail.com">
                                 </th>
                                 <th scope="col">
                                     <label for="daysWorkedSearch">Days Worked</label>
-                                    <input class="tiny-input" type="number" pattern="/d*" id="daysWorkedSearch" onkeyup="filterResults()"placeholder="0">
+                                    <input class="tiny-input searcher" type="text" pattern="/d*" id="daysWorkedSearch" onkeyup="filterResults()"placeholder="0">
                                 </th>
                                 <th scope="col">
                                     <label for="overTimeSearch">Over Time</label>
-                                    <input class="tiny-input" type="number" pattern="/d*" id="overTimeSearch" onkeyup="filterResults()"placeholder="0">
+                                    <input class="tiny-input searcher" type="text" pattern="/d*" id="overTimeSearch" onkeyup="filterResults()"placeholder="0">
                                 </th>
                                 <th scope="col">
                                     <label for="weekFinishedSearch">Week End Date</label>
-                                    <input class="date-input" type="date" id="weekFinishedSearch" onkeyup="filterResults()">
+                                    <input class="date-input searcher" type="text" id="weekFinishedSearch" onkeyup="filterResults()">
                                 </th>
                                 <th scope="col">
-                                    <label for="statusSearch">Status</label>
-                                    <input class="tiny-input" type="text" id="statusSearch" onkeyup="filterResults()"placeholder="Approved"/>
+                                    <label for="reviewSearch">Reviewed</label>
+                                    <input class="tiny-input searcher" type="text" id="reviewSearch" onkeyup="filterResults()"placeholder="Approved"/>
                                 </th>
                                 <th scope="col">
                                     <label for="paidSearch">Paid</label>
-                                    <input class="tiny-input" type="text" id="paidSearch" onkeyup="filterResults()"placeholder="true"/>
+                                    <input class="tiny-input searcher" type="text" id="paidSearch" onkeyup="filterResults()"placeholder="true"/>
                                 </th>
                             </tr>
                             </thead>
@@ -93,6 +93,67 @@
     }
     function filterResults() {
 
+        var table = document.getElementById("reviews");
+        var search_items = document.getElementsByClassName("searcher");
+        var tr = table.getElementsByTagName("tr");
+
+        var td;
+        var filter;
+        for (i = 0; i < tr.length; i++) {
+
+
+            var row = tr[i];
+            row.style.display = "";
+
+            for (iter = 0; iter < search_items.length; iter++) {
+
+                td = row.getElementsByTagName("td")[iter];
+                if (td) {
+
+                    filter = search_items[iter].value.toUpperCase();
+                    txtValue = td.textContent || td.innerText;
+
+                    if (!(txtValue.toUpperCase().indexOf(filter) > -1) && filter) {
+                        tr[i].style.display = "none";
+                    }
+
+                }
+            }
+
+
+            // td = tr[i].getElementsByTagName("td")[0];
+            // if (td) {
+            //     txtValue = td.textContent || td.innerText;
+            //     if (!(txtValue.toUpperCase().indexOf(name_filter) > -1) && name_filter) {
+            //         tr[i].style.display = "none";
+            //     }
+            // }
+            //
+            // td = tr[i].getElementsByTagName("td")[1];
+            // if (td) {
+            //     txtValue = td.textContent || td.innerText;
+            //     if (!(txtValue.toUpperCase().indexOf(agency_filter) > -1) && agency_filter) {
+            //         tr[i].style.display = "none";
+            //     }
+            // }
+            //
+            // td = tr[i].getElementsByTagName("td")[2];
+            // if (td) {
+            //     txtValue = td.textContent || td.innerText;
+            //     if (!(txtValue == worked_filter) && worked_filter) {
+            //         tr[i].style.display = "none";
+            //     }
+            // }
+            //
+            // td = tr[i].getElementsByTagName("td")[3];
+            // if (td) {
+            //     txtValue = td.textContent || td.innerText;
+            //     if (!(txtValue == overtime_filter) && overtime_filter) {
+            //         tr[i].style.display = "none";
+            //     }
+            // }
+
+        }
     }
 </script>
 </body>
