--- a/src/main/resources/templates/manager_view.html
+++ b/src/main/resources/templates/manager_view.html
@@ -44,7 +44,7 @@
                                 </th>
                                 <th scope="col">
                                     <label for="weekFinishedSearch">Week Finished</label>
-                                    <input class="date-input searcher" type="text" id="weekFinishedSearch" onkeyup="filterResults()">
+                                    <input class="date-input searcher" type="text" id="weekFinishedSearch" onkeyup="filterResults()" placeholder="YYYY-MM-DD">
                                 </th>
                             </tr>
                             </thead>
