save button design

--- a/src/main/resources/templates/review_approval.html
+++ b/src/main/resources/templates/review_approval.html
@@ -119,8 +119,13 @@
                                                             th:field="*{message}"
                                                             type="text" />
                                                 </div>
-                                        <button class="btn btn- btn-primary" type="submit"
-                                           id="approve">Save</button>
+
+                                   <div class="row mt-4">
+
+                                       <button class="btn btn-lg btn-primary btn-block custom-btn"  type="submit"
+                                               id="approve">Save</button>
+                                   </div>
+
 
 <!--                                                    <button class="btn btn-primary "-->
 <!--                                                              th:href="@{/Reviews}"-->
