--- a/src/main/resources/templates/review_reject.html
+++ b/src/main/resources/templates/review_reject.html
@@ -30,8 +30,11 @@
                                                             th:field="*{message}"
                                                             type="text" />
                                                 </div>
-                                                    <button class="btn btn- btn-primary" id="reject" type="saveReject"
-                                                >Save</button>
+                                   <div class="row mt-4">
+
+                                       <button class="btn btn-lg btn-primary btn-block custom-btn"  type="saveRejct"
+                                               id="reject">Save</button>
+                                   </div>
 
                                 </form>
                             </div>
