--- a/src/main/resources/templates/review_reject.html
+++ b/src/main/resources/templates/review_reject.html
@@ -32,7 +32,7 @@
                                                 </div>
                                    <div class="row mt-4">
 
-                                       <button class="btn btn-lg btn-primary btn-block custom-btn"  type="saveRejct"
+                                       <button class="btn btn-lg btn-primary btn-block custom-btn"  type="submit"
                                                id="reject">Save</button>
                                    </div>
 
