Added week ending picker for timesheets

--- a/src/main/resources/static/css/starter-template.css
+++ b/src/main/resources/static/css/starter-template.css
@@ -102,7 +102,10 @@ body {
     width: 100%;
     padding-right: 0!important;
 }
-
+.date-picker::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    display: none;
+}
 
 #hidden {
     display: none;
