--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 
-<head th:replace="fragments/header :: head"></head>
+<head th:replace="fragments/header :: head"><title></title></head>
 
 <body>
 
@@ -36,16 +36,9 @@
 
 
                     <div class="row mt-4">
-                        <input class="btn btn-lg btn-primary btn-block text-uppercase custom-btn" type="submit"
-                               value="Sign In"/>
+                        <input class="btn btn-lg btn-primary btn-block text-uppercase custom-btn"
+                               type="submit" value="Sign In"/>
 
-<!--                        <a class="btn btn-lg btn-primary btn-block text-uppercase custom-btn"-->
-<!--                           th:href="@{/register}"-->
-<!--                           th:id="register">Register</a>-->
-
-<!--                        <a class="btn btn-lg btn-primary btn-block text-uppercase custom-btn"-->
-<!--                           th:href="@{/registerAgency}"-->
-<!--                           th:id="registerAgency">Register Agency</a>-->
                     </div>
 
                 </form>
