--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/header :: head"></head>
+<head th:replace="fragments/header :: head"><title></title></head>
 
 <body>
 <div th:replace="fragments/header :: header"></div>
@@ -19,12 +19,13 @@
                         </div>
 
                         <div class="form-group custom-label">
-                            <label th:for="username">Username</label>
-                            <input aria-describedby="Enter a Username."
-                                   class="form-control"
-                                   placeholder="Username"
-                                   th:field="*{username}"
-                                   type="text">
+                            <label>Username
+                                <input aria-describedby="Enter a Username."
+                                       class="form-control"
+                                       placeholder="Username"
+                                       th:field="*{username}"
+                                       type="text">
+                            </label>
 
                             <div class="alert alert-danger"
                                  th:errors="*{username}"
@@ -34,12 +35,13 @@
                         </div>
 
                         <div class="form-group custom-label">
-                            <label th:for="firstname">First Name</label>
-                            <input aria-describedby="Enter First Name."
-                                   class="form-control"
-                                   placeholder="First Name"
-                                   th:field="*{firstname}"
-                                   type="text">
+                            <label>First Name
+                                <input aria-describedby="Enter First Name."
+                                       class="form-control"
+                                       placeholder="First Name"
+                                       th:field="*{firstname}"
+                                       type="text">
+                            </label>
 
                             <div class="alert alert-danger"
                                  th:errors="*{firstname}"
@@ -49,12 +51,13 @@
                         </div>
 
                         <div class="form-group custom-label">
-                            <label th:for="surname">Surname</label>
-                            <input aria-describedby="Enter a Surname."
-                                   class="form-control"
-                                   placeholder="Surname"
-                                   th:field="*{surname}"
-                                   type="text">
+                            <label>Surname
+                                <input aria-describedby="Enter a Surname."
+                                       class="form-control"
+                                       placeholder="Surname"
+                                       th:field="*{surname}"
+                                       type="text">
+                            </label>
 
                             <div class="alert alert-danger"
                                  th:errors="*{surname}"
@@ -64,12 +67,13 @@
                         </div>
 
                         <div class="form-group custom-label">
-                            <label th:for="email">Email</label>
-                            <input aria-describedby="Enter an Email"
-                                   class="form-control"
-                                   placeholder="Email"
-                                   th:field="*{email}"
-                                   type="text">
+                            <label>Email
+                                <input aria-describedby="Enter an Email"
+                                       class="form-control"
+                                       placeholder="Email"
+                                       th:field="*{email}"
+                                       type="text">
+                            </label>
 
                             <div class="alert alert-danger"
                                  th:errors="*{email}"
@@ -79,12 +83,13 @@
                         </div>
 
                         <div class="form-group custom-label">
-                            <label th:for="password">Password</label>
-                            <input aria-describedby="Enter Password."
-                                   class="form-control"
-                                   placeholder="Password"
-                                   th:field="*{password}"
-                                   type="text">
+                            <label>Password
+                                <input aria-describedby="Enter Password."
+                                       class="form-control"
+                                       placeholder="Password"
+                                       th:field="*{password}"
+                                       type="text">
+                            </label>
 
                             <div class="alert alert-danger"
                                  th:errors="*{password}"
@@ -94,28 +99,31 @@
                         </div>
 
                         <div class="form-group custom-label">
-                            <label th:for="role">Select Role</label>
-                            <select class="form-control" th:field="*{role}" onchange="showHidden('hidden', this)">
-                                <option th:value="ROLE_ADMIN">ADMIN</option>
-                                <option th:value="ROLE_MANAGER">MANAGER</option>
-                                <option th:value="ROLE_CONTRACTOR">CONTRACTOR</option>
-                            </select>
+                            <label th:for="role">Select Role
+                                <select class="form-control" th:field="*{role}" onchange="showHidden('hidden', this)">
+                                    <option th:value="ROLE_ADMIN">ADMIN</option>
+                                    <option th:value="ROLE_MANAGER">MANAGER</option>
+                                    <option th:value="ROLE_CONTRACTOR">CONTRACTOR</option>
+                                </select>
+                            </label>
                         </div>
 
                         <div class="form-group custom-label" id="hidden">
-                            <label th:for="manager">Select Manager For Contractor</label>
+                            <label th:for="manager">Select Manager For Contractor
                                 <select class="form-control" th:field="*{managerId}">
                                     <option th:each="i:${managerKey}" th:value="${i.id}"
                                             th:text="${i.username}">
                                     </option>
                                 </select>
+                            </label>
 
-                            <label th:for="agency">Select Agency For Contractor</label>
-                            <select class="form-control" th:field="*{agencyId}">
-                                <option th:each="a:${agencyKey}" th:value="${a.id}"
-                                        th:text="${a.name}">
-                                </option>
-                            </select>
+                            <label th:for="agency">Select Agency For Contractor
+                                <select class="form-control" th:field="*{agencyId}">
+                                    <option th:each="a:${agencyKey}" th:value="${a.id}"
+                                            th:text="${a.name}">
+                                    </option>
+                                </select>
+                            </label>
                         </div>
 
                         <div class="row mt-4">
