--- a/src/main/resources/templates/timesheet_view.html
+++ b/src/main/resources/templates/timesheet_view.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/header :: head">
-    <!-- Fragment Insert -->
-</head>
+<head th:replace="fragments/header :: head"><title></title></head>
 
 <body>
 <div th:replace="fragments/header :: header"></div>
@@ -31,14 +29,13 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <!--                    th:each="timesheet: ${TimesheetKey}">-->
-                    <td><span
-                            th:text="${TimesheetKey.contractor.user.firstname} + ' ' ${TimesheetKey.contractor.user.surname}"/>
-                    </td>
-                    <td><span th:text="${TimesheetKey.contractor.agency.name}"/></td>
-                    <td><span th:text="${TimesheetKey.daysWorked}"/></td>
-                    <td><span th:text="${TimesheetKey.overtime}"/></td>
-                    <td><span th:text="${TimesheetKey.week_finish}"/></td>
+                    <!--                    th:each="timeSheet: ${TimesheetKey}">-->
+                    <td><span th:text="${TimesheetKey.contractor.user.firstname} + ' '
+                                       ${TimesheetKey.contractor.user.surname}"></span></td>
+                    <td><span th:text="${TimesheetKey.contractor.agency.name}"></span></td>
+                    <td><span th:text="${TimesheetKey.daysWorked}"></span></td>
+                    <td><span th:text="${TimesheetKey.overtime}"></span></td>
+                    <td><span th:text="${TimesheetKey.week_finish}"></span></td>
 
 
                 </tbody>
